# daily-node

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  Jenkinsfile  README.md  conanfile.py  docker-entrypoint.sh
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: pr-actions.yml  pr-net-cleanup-on-close.yml  trigger-ci-on-branch.yml
CMakeModules/: ProjectSecp256k1.cmake  clang_tidy.cmake  cpp_graphql_gen.cmake
charts/daily-node/: CHANGELOG.md  Chart.yaml  values.yaml
charts/daily-node/templates/: _helpers.tpl  bootnode-configmap.yaml  bootnode-service.yaml  (+24 more)
doc/: RPC.md  building.md  contributing.md  evm_incompatibilities.md  git_practices.md  quickstart_guide.md  rewards_distribution.md
for_devs/: README.md
libraries/common/: CMakeLists.txt
libraries/core_libs/: CMakeLists.txt
libraries/vdf/: CMakeLists.txt
programs/: CMakeLists.txt
programs/daily-bootnode/: CMakeLists.txt  README.md  main.cpp
programs/dailyd/: CMakeLists.txt  main.cpp
scripts/: daily-sign.py  kibana-url.sh
submodules/: CMakeLists.txt
submodules/daily-evm/: README.md  go.mod
tests/: CMakeLists.txt  abi_test.cpp  cache_test.cpp  crypto_test.cpp  dag_block_test.cpp  dag_test.cpp  final_chain_test.cpp  full_node_test.cpp  gas_pricer_test.cpp  network_test.cpp  p2p_test.cpp  pbft_chain_test.cpp  pbft_manager_test.cpp  pillar_chain_test.cpp  rewards_stats_test.cpp  rpc_test.cpp  sortition_test.cpp  state_api_test.cpp  tarcap_threadpool_test.cpp  transaction_test.cpp  vote_test.cpp
tests/test_util/: gtest.hpp
(+478 files in other folders)
